Fix SonarCloud code smells